# assistant_dba

./: .env.example  .gitignore  =0.0.6  CLAUDE.md  DEPLOYMENT.md  README.md  TEAM.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup_test_data.py
backend/: requirements.txt
backend/configs/: sql_templates.json
backend/data/: connections.db
backend/src/: config.py  main.py
backend/src/agents/: __init__.py  result_summarizer.py  sql_generator.py  table_selector.py
backend/src/api/: admin.py  chat.py  db.py  monitor.py  templates.py  text2sql.py  visit.py
backend/src/core/: dependencies.py  errors.py  intent.py  llm.py  performance_analyzer.py  service.py
backend/src/db/: __init__.py  connection.py  database.py  manager.py  models.py  schema_introspector.py  schema_loader.py  sql_validator.py  template_manager.py
backend/src/plugins/: base.py  registry.py
backend/tests/: conftest.py
configs/: erp_schema.json  prompts.yaml  settings.example.yaml  sql_templates.json  tools.yaml
docs/: QA_REPORT.md
docs/superpowers/plans/: 2026-03-27-text2sql-implementation.md  2026-03-29-architecture-refactor.md  2026-03-30-langgraph-refactor.md
docs/superpowers/specs/: 2026-03-27-text2sql-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: file_search.sh  git_status.sh  setup_erp_simulation.py  simulate_db_operations.py  system_monitor.sh
src/smart_assistant/: DEPRECATED.md  __init__.py  config.py  main.py
tests/: test_llm.py  test_llm_client.py  test_plugins.py  test_registry.py
(+44 files in other folders)
